# OMW-ONLINE

./: README.md  build.gradle  gradlew
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ui/controls/: Osc.kt  Osk.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: settings.xml
buildscripts/: CMakeLists.txt  build.sh
patch/: water_fragment.glsl
